Change license in package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Make it easier to upload the required GTFS files.",
   "author": "Sean Brewer",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "chatt-gtfs-cleanup": "git://github.com/jden/chatt-gtfs-cleanup"
   }
