--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carta-upload-gtfs",
   "version": "1.0.0",
-  "description": "Make it easier to upload the required GTFS files.",
+  "description": "Make it easier to upload required GTFS files.",
   "author": "Sean Brewer",
   "license": "MIT",
   "dependencies": {
